Update Coin Description

--- a/README
+++ b/README
@@ -1,1 +1,40 @@
-README.md
+
+Crocodile Cash v1.3.8.0
+
+Algorithm: SHA-256 PoW/DPOS/PoS Hybrid
+
+Ticker: CROC
+
+Block Time: 30 Seconds
+
+Difficulty Re-targeting: Every Block
+
+Total Coins: 55,000,000 (55 Million)
+
+Pre-Mine: 302,400 Coins (Half for Developer & the Rest for Bounties + Giveaway)
+
+PoW Reward: 15 coins per block until block 80640 (1 Month) then 1 coin per block afterwards
+
+DPOS: 1st Week = 60 coins (Starts at block 1440)
+
+2nd Week = 45 coins
+
+3rd Week = 30 coins
+
+4th Week = 15 coins (Ends at block 80640)
+
+PoS Yearly Interest: 12% Yearly Interest (Starts at block 80641) (1 Month)
+
+Minimum Stake Age: 2 hours
+
+Maximum Stake Age: Unlimited
+
+Mined Block Confirmations Require: 60 Blocks
+
+Transaction Confirmations Require: 20 Blocks
+
+RPC Port: 39438
+
+P2P Port: 39437
+
+CrocodileCash.conf
